--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "http://sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "mocha"
@@ -33,8 +33,8 @@
     "checker"
   ],
   "dependencies": {
-    "event-stream": "~3.0.20",
     "gulp-util": "~2.2.0",
+    "through2": "~0.4.0",
     "jscs": "~1.2.0"
   },
   "devDependencies": {
