--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "checker"
   ],
   "dependencies": {
-    "gulp-util": "~2.2.0",
-    "through2": "~0.4.0",
-    "jscs": "~1.3.0"
+    "gulp-util": "^2.2.0",
+    "through2": "^0.4.0",
+    "jscs": "^1.3.0"
   },
   "devDependencies": {
     "mocha": "*"
