--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   ],
   "dependencies": {
     "gulp-util": "^2.2.0",
-    "through2": "^0.4.0",
-    "jscs": "^1.4.3"
+    "jscs": "^1.4.3",
+    "through2": "^0.5.1"
   },
   "devDependencies": {
     "mocha": "*"
