--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "mocha"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "reporters.js"
   ],
   "keywords": [
     "gulpplugin",
