Close PR #66: Add gulp-jshint-like reporters - fixes #21

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "pretest": "jscs *.js",
+    "pretest": "jscs *.js reporters",
     "test": "mocha"
   },
   "files": [
@@ -41,6 +41,7 @@
     "tildify": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+    "stream-assert": "^2.0.2"
   }
 }
