--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "pretest": "jscs *.js reporters",
     "test": "xo && mocha"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "reporters"
   ],
   "keywords": [
     "gulpplugin",
@@ -36,13 +36,13 @@
   "dependencies": {
     "gulp-util": "^3.0.4",
     "jscs": "^2.1.1",
-    "object-assign": "^4.0.1",
     "through2": "^2.0.0",
     "tildify": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "*",
     "stream-assert": "^2.0.2",
+    "temp-write": "^1.1.2",
     "xo": "*"
   }
 }
